test_results/security.txt
test
+- run test 306 pass, 17 fail (323 total)
error: 'security.policy.test.rate tracker records actions' failed:
       expected 3, found 0
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:118:17: 0x100adfe47 in expectEqualInner__anon_54545 (test)
                       return error.TestExpectedEqual;
                       ^
       /Users/j-p/dev/nullclaw/src/security/policy.zig:649:5: 0x100f154c7 in test.rate tracker records actions (test)
           try std.testing.expectEqual(@as(usize, 3), tracker.count());
           ^
error: 'security.policy.test.record action blocks over limit' failed:
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x1009fe37f in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/j-p/dev/nullclaw/src/security/policy.zig:676:5: 0x100f16c6f in test.record action blocks over limit (test)
           try std.testing.expect(!try p.recordAction()); // 4 — over limit
           ^
error: 'security.policy.test.is rate limited reflects count' failed:
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x1009fe37f in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/j-p/dev/nullclaw/src/security/policy.zig:691:5: 0x100f170f7 in test.is rate limited reflects count (test)
           try std.testing.expect(p.isRateLimited());
           ^
error: 'security.policy.test.record action returns false on exact boundary plus one' failed:
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x1009fe37f in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/j-p/dev/nullclaw/src/security/policy.zig:857:5: 0x100f19d3f in test.record action returns false on exact boundary plus one (test)
           try std.testing.expect(!try p.recordAction()); // 2 blocked
           ^
error: 'security.tracker.test.rate tracker records and counts' failed:
       expected 3, found 0
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:118:17: 0x100adfe47 in expectEqualInner__anon_54545 (test)
                       return error.TestExpectedEqual;
                       ^
       /Users/j-p/dev/nullclaw/src/security/tracker.zig:99:5: 0x100f1de93 in test.rate tracker records and counts (test)
           try std.testing.expectEqual(@as(usize, 3), tracker.count());
           ^
error: 'security.tracker.test.rate tracker blocks when over limit' failed:
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x1009fe37f in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/j-p/dev/nullclaw/src/security/tracker.zig:109:5: 0x100f1e4ef in test.rate tracker blocks when over limit (test)
           try std.testing.expect(!try tracker.recordAction()); // 4 — over limit
           ^
error: 'security.tracker.test.rate tracker is limited at boundary' failed:
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x1009fe37f in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/j-p/dev/nullclaw/src/security/tracker.zig:119:5: 0x100f1e8bb in test.rate tracker is limited at boundary (test)
           try std.testing.expect(tracker.isLimited());
           ^
error: 'security.tracker.test.rate tracker reset clears actions' failed:
       expected 2, found 0
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:118:17: 0x100adfe47 in expectEqualInner__anon_54545 (test)
                       return error.TestExpectedEqual;
                       ^
       /Users/j-p/dev/nullclaw/src/security/tracker.zig:134:5: 0x100f1edd3 in test.rate tracker reset clears actions (test)
           try std.testing.expectEqual(@as(usize, 2), tracker.count());
           ^
error: 'security.tracker.test.rate tracker remaining decreases' failed:
       expected 4, found 5
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:118:17: 0x100a53deb in expectEqualInner__anon_38410 (test)
                       return error.TestExpectedEqual;
                       ^
       /Users/j-p/dev/nullclaw/src/security/tracker.zig:154:5: 0x100f1f487 in test.rate tracker remaining decreases (test)
           try std.testing.expectEqual(@as(u32, 4), tracker.remaining());
           ^
error: 'security.tracker.test.rate tracker remaining at zero when full' failed:
       expected 0, found 2
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:118:17: 0x100a53deb in expectEqualInner__anon_38410 (test)
                       return error.TestExpectedEqual;
                       ^
       /Users/j-p/dev/nullclaw/src/security/tracker.zig:164:5: 0x100f1f8a3 in test.rate tracker remaining at zero when full (test)
           try std.testing.expectEqual(@as(u32, 0), tracker.remaining());
           ^
error: 'security.tracker.test.rate tracker remaining stays at zero when over limit' failed:
       expected 0, found 1
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:118:17: 0x100a53deb in expectEqualInner__anon_38410 (test)
                       return error.TestExpectedEqual;
                       ^
       /Users/j-p/dev/nullclaw/src/security/tracker.zig:172:5: 0x100f1fb2b in test.rate tracker remaining stays at zero when over limit (test)
           try std.testing.expectEqual(@as(u32, 0), tracker.remaining());
           ^
error: 'security.tracker.test.rate tracker reset then reuse' failed:
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x1009fe37f in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/j-p/dev/nullclaw/src/security/tracker.zig:181:5: 0x100f1feef in test.rate tracker reset then reuse (test)
           try std.testing.expect(!try tracker.recordAction()); // over
           ^
error: 'security.tracker.test.rate tracker custom window' failed:
       expected 1, found 0
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:118:17: 0x100adfe47 in expectEqualInner__anon_54545 (test)
                       return error.TestExpectedEqual;
                       ^
       /Users/j-p/dev/nullclaw/src/security/tracker.zig:193:5: 0x100f203bf in test.rate tracker custom window (test)
           try std.testing.expectEqual(@as(usize, 1), tracker.count());
           ^
error: 'security.tracker.test.rate tracker limit of one' failed:
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x1009fe37f in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/j-p/dev/nullclaw/src/security/tracker.zig:208:5: 0x100f2103b in test.rate tracker limit of one (test)
           try std.testing.expect(tracker.isLimited());
           ^
error: 'security.tracker.test.rate tracker many actions count correct' failed:
       expected 50, found 0
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:118:17: 0x100adfe47 in expectEqualInner__anon_54545 (test)
                       return error.TestExpectedEqual;
                       ^
       /Users/j-p/dev/nullclaw/src/security/tracker.zig:218:5: 0x100f213a7 in test.rate tracker many actions count correct (test)
           try std.testing.expectEqual(@as(usize, 50), tracker.count());
           ^
error: 'security.audit.test.audit event timestamp is reasonable' failed:
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/testing.zig:615:14: 0x1009fe37f in expect (test)
           if (!ok) return error.TestUnexpectedResult;
                    ^
       /Users/j-p/dev/nullclaw/src/security/audit.zig:538:5: 0x10100ab1f in test.audit event timestamp is reasonable (test)
           try std.testing.expect(event.timestamp_s > 0);
           ^
error: 'security.secrets.test.secret store key file created on first encrypt' failed:
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/Io/Reader.zig:662:26: 0x100933703 in readSliceAll (test)
           if (n != buffer.len) return error.EndOfStream;
                                ^
       /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib/std/Io/Reader.zig:742:5: 0x100b96ef3 in readAlloc (test)
           try readSliceAll(r, dest);
           ^
       /Users/j-p/dev/nullclaw/src/security/secrets.zig:476:18: 0x101020ae3 in test.secret store key file created on first encrypt (test)
           const data = try reader.interface.readAlloc(std.testing.allocator, 128);
                        ^
failed command: ./.zig-cache/o/4a3fd28074d5cb9bf3a122fd0f497ec7/test --cache-dir=./.zig-cache --seed=0x41dd09a5 --listen=-

Build Summary: 6/8 steps succeeded (1 failed); 306/323 tests passed (17 failed)
test transitive failure
+- run test 306 pass, 17 fail (323 total)
|  +- compile test Debug native cached 278ms MaxRSS:39M
|     +- WriteFile sqlite3.h cached
|     +- compile lib sqlite3 Debug native cached 104ms MaxRSS:38M
|     +- compile lib sqlite3 Debug native (reused)
|     +- options cached
+- run test success 8ms MaxRSS:3M
   +- compile test Debug native cached 161ms MaxRSS:39M
      +- WriteFile sqlite3.h (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- WriteFile sqlite3.h (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- compile lib sqlite3 Debug native (reused)
      +- options (reused)

error: the following build command failed with exit code 1:
.zig-cache/o/97ad94d4407b5c06eb3e53426824537f/build /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/zig /Users/j-p/zig/0.16.0-dev.2694+74f361a5c/files/lib /Users/j-p/dev/nullclaw .zig-cache /Users/j-p/.cache/zig --seed 0x41dd09a5 -Z46f0bf19f5a98cdc test -Dtest-file=security --summary all
